# sonata

./: .gitignore  Cargo.toml  README.md
src/: adtree.rs  ast.rs  cons.rs  main.rs  sonata.rs
src/doc/: syntax.md
src/libproc/: Cargo.toml  README.md  bridge.rs  lexer.rs  lib.rs  parser.rs
src/stcc/: Cargo.toml  README.md  adtree.rs  ast.rs  cons.rs  lexer.rs  mod.rs  stream.rs  tyck.rs
src/stcc/tests/: test_stream.rs
src/sti/: Cargo.toml  README.md  ast.rs  bridge.rs  error.rs  lexer.rs  lib.rs  parser.rs  typeck.rs
src/stl/: Cargo.toml  lexer.rs  stream.rs
src/stx/: Cargo.toml  README.md  ast.rs  atom.rs  bridge.rs  error.rs  lexer.rs
tests/: test_stream.rs
